--- a/TourManagement.Presentation/Views/Home/Index.cshtml
+++ b/TourManagement.Presentation/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@using TourManagement.Models.DBContext
 @model IEnumerable<Tour>
 @{
-    ViewBag.Title = "Home - Let's Go";
+    ViewBag.Title = "Trang chu - Let's Go";
 }
 <div class="container body-content py-3">
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
