--- a/TourManagement.Presentation/Views/Tours/Details.cshtml
+++ b/TourManagement.Presentation/Views/Tours/Details.cshtml
@@ -39,7 +39,7 @@
                 </div>
             </div>
             <div class="input-group addtocart py-3 justify-content-center">
-                <a href="#" class="addtocart btn btn-outline-primary mr-3"><span class="fas fa-shopping-cart mr-1"></span>Book Now</a>
+                <a href="@Url.Action("OrderTour","OrderTours", new { id= Model.Id})" class="addtocart btn btn-outline-primary mr-3"><span class="fas fa-shopping-cart mr-1"></span>Book Now</a>
             </div>
         </div>
 
