--- a/TourManagement.Presentation/Views/Users/Login.cshtml
+++ b/TourManagement.Presentation/Views/Users/Login.cshtml
@@ -2,14 +2,15 @@
 
 @{
     ViewBag.Title = "Login";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<div class="m-auto">
-    <h4>Đăng nhập</h4>
-    @using (Html.BeginForm("Login", "Users", FormMethod.Post, new { @class = "form-horizontal" }))
+<div class="m-auto pt-5">
+    <h4 class="text-center">Đăng nhập</h4>
+    @using (Html.BeginForm("Login", "Users", FormMethod.Post, new { @class = "form-horizontal d-flex justify-content-center " }))
     {
         @Html.AntiForgeryToken()
-        @ViewBag.MessageError;
-        <div class="form-horizontal">
+        
+        <div class="form-horizontal col-4">
 
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
@@ -20,6 +21,8 @@
                     @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
                 </div>
             </div>
+
+
             <div class="form-group">
                 @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
@@ -27,14 +30,17 @@
                     @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
                 </div>
             </div>
+            <div class="text-danger" style="height: 50px;">@ViewBag.MessageError</div>
             <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
+                <div class="col-md-10">
                     <input type="submit" value="Login" class="btn btn-outline-success" />
                 </div>
             </div>
-            <p>
-                @Html.ActionLink("Register as a new user", "Register")
-            </p>
+            <div class="col-md-10">
+                <p>
+                    @Html.ActionLink("Register as a new user", "Register")
+                </p>
+            </div>
         </div>
     }
 
