update lai database

--- a/TourManagement.Presentation/Views/Home/Index.cshtml
+++ b/TourManagement.Presentation/Views/Home/Index.cshtml
@@ -2,6 +2,7 @@
 @model IEnumerable<Tour>
 @{
     ViewBag.Title = "Trang chu - Let's Go";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <div class="container body-content py-3">
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
