--- a/TourManagement.Presentation/Views/Shared/LoginPatial.cshtml
+++ b/TourManagement.Presentation/Views/Shared/LoginPatial.cshtml
@@ -14,7 +14,7 @@
             </a>
 
             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <a class="dropdown-item" href="#">Tài khoản của tôi</a>
+                <a class="dropdown-item" href="@Url.Action("GetOrderTour", "OrderTours")">Tài khoản của tôi</a>
                 <a class="dropdown-item" href="javascript:document.getElementById('logoutForm').submit()">Đăng xuất</a>
             </div>
         </div>
