--- a/TourManagement.Presentation/Views/OrderTours/OrderTour.cshtml
+++ b/TourManagement.Presentation/Views/OrderTours/OrderTour.cshtml
@@ -28,7 +28,7 @@
                     <span class="col-6">Điểm xuất phát: </span><span>@tour.PositionStart</span>
                 </div>
                 <div class="row">
-                    <span class="col-6">Giá từ: </span>@Math.Truncate(tour.PriceOfAdult.Value) đ/khách</span>
+                    <span class="col-6">Giá từ: </span><span> @Math.Truncate(tour.PriceOfAdult.Value).ToString("###,###,###") đ/khách</span>
                 </div>
                 <div class="row">
                     <span class="col-6">Số lượng chỗ còn: </span><span>@ViewBag.Remaining</span>
@@ -59,8 +59,8 @@
         <tbody>
             <tr>
                 <th>Giá</th>
-                <td>@tour.PriceOfAdult.Value đ</td>
-                <td>@tour.PriceOfChild.Value đ</td>
+                <td>@Math.Truncate(tour.PriceOfAdult.Value).ToString("###,###,###") đ</td>
+                <td>@Math.Truncate(tour.PriceOfChild.Value).ToString("###,###,###") đ</td>
             </tr>
         </tbody>
     </table>
@@ -79,21 +79,21 @@
             <div class="form-group col-4">
                 <label class="control-label">Tên khách hàng</label>
                 <div>
-                    <input type="text" value="@custommer.Name" disabled="disabled" />
+                    <input type="text" value="@custommer.Name" readonly />
                 </div>
             </div>
 
             <div class="form-group col-4">
                 <label class="control-label">Số diện thoại</label>
                 <div>
-                    <input type="text" value="@custommer.Phone" disabled="disabled" />
+                    <input type="text" value="@custommer.Phone" readonly/>
                 </div>
             </div>
 
             <div class="form-group col-4">
                 <label class="control-label">Địa chỉ</label>
                 <div>
-                    <input type="text" value="@custommer.Address" disabled="disabled" />
+                    <input type="text" value="@custommer.Address" readonly />
                 </div>
             </div>
         </div>
