them bang image

--- a/TourManagement.Presentation/Views/OrderTours/GetOrderTour.cshtml
+++ b/TourManagement.Presentation/Views/OrderTours/GetOrderTour.cshtml
@@ -8,7 +8,7 @@
     @if (!Model.Any())
     {
         <div class="m-auto">
-            <p>bạn chưa có đơn đặt tour nào</p>
+            <p>Bạn chưa có đơn đặt tour nào</p>
             <a href="@Html.ActionLink("Index","Home")">Tìm tour tại đây</a>
         </div>
     }
