--- a/TourManagement.Presentation/Views/OrderTours/OrderTour.cshtml
+++ b/TourManagement.Presentation/Views/OrderTours/OrderTour.cshtml
@@ -6,9 +6,27 @@
 }
 <div class="row">
     <div class="col-md-6">
-        <div>
-            <img class="img-fluid img-thumbnail" style="width: 100%;" src="~/Content/images/@tour.Image"
-                 alt="@tour.Name" />
+        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="~/Content/images/@tour.Images.FirstOrDefault().NameImage" style="width: 100%;"
+                         class="d-block w-100" height="400" alt="...">
+                </div>
+                @foreach (var item in tour.Images)
+                {
+                    <div class="carousel-item">
+                        <img src="~/Content/images/@item.NameImage" style="width: 100%;" class="d-block w-100" height="400" alt="...">
+                    </div>
+                }
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
         </div>
     </div>
     <div class="col-md-6 border h-75 py-3">
@@ -48,7 +66,7 @@
         <h4>Bảng giá chi tiết</h4>
     </div>
 
-    <table class="table table-bordered">
+    <table class="table table-bordered text-center">
         <thead>
             <tr>
                 <th scope="col">Loại giá</th>
@@ -61,6 +79,12 @@
                 <th>Giá</th>
                 <td>@Math.Truncate(tour.PriceOfAdult.Value).ToString("###,###,###") đ</td>
                 <td>@Math.Truncate(tour.PriceOfChild.Value).ToString("###,###,###") đ</td>
+            </tr>
+            <tr>
+                <th>Phụ thu phòng đơn</th>
+                <td colspan="2">
+                    @Math.Truncate(tour.SurchargeOfRoom.Value).ToString("###,###,###")
+                </td>
             </tr>
         </tbody>
     </table>
@@ -124,7 +148,7 @@
                 </div>
             </div>
         </div>
-
+        <hr />
 
         <div class="text-center">
             <div>
