--- a/TourManagement.Presentation/Views/Tours/Details.cshtml
+++ b/TourManagement.Presentation/Views/Tours/Details.cshtml
@@ -2,6 +2,7 @@
 @{
     ViewBag.Title = Model.Name;
     var remaining = @ViewBag.Remaining;
+    
 }
 <div class="container tour-container pt-4">
     <div>
@@ -9,11 +10,29 @@
     </div>
     <div class="row">
         <div class="col-md-8">
-            <div>
-                <img class="img-fluid img-thumbnail" style="width: 100%;" src="~/Content/images/@Model.Image"
-                     alt="@Model.Name" />
+            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="~/Content/images/@Model.Images.FirstOrDefault().NameImage" style="width: 100%;" class="d-block w-100" height="400" alt="...">
+                    </div>
+                    @foreach (var item in Model.Images)
+                    {
+                        <div class="carousel-item">
+                            <img src="~/Content/images/@item.NameImage" style="width: 100%;" class="d-block w-100" height="400" alt="...">
+                        </div>
+                    }
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
             </div>
         </div>
+
         <div class="col-md-4 border h-75 py-3">
             <div class="tour-cart font-weight-normal">
                 <div class="text-center">
@@ -58,13 +77,13 @@
                     <h6 class="col-3">Xuất phát: </h6><span class="font-weight-light col-9">@Model.PositionStart</span>
                 </div>
             </div>
-            <div class="py-4">
+            <div class="py-4 border-top">
                 <h5><img src="~/Content/images/content.svg" height="20" width="20"> Giới thiệu chung</h5>
                 <div>
                     <p>@Model.Content</p>
                 </div>
             </div>
-            <div class="row py-4">
+            <div class="row py-4 border-top">
                 <div class="col-6">
                     <h5>Bao gồm</h5>
                     <ul>
