--- a/TourManagement.Presentation/Views/OrderTours/GetOrderTour.cshtml
+++ b/TourManagement.Presentation/Views/OrderTours/GetOrderTour.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<TourManagement.Models.DBContext.OrderTour>
 @{
-    ViewBag.Title = "GetOrderTour";
+    ViewBag.Title = "Get Ordered Tour";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
