--- a/TourManagement.Presentation/Views/Shared/HotelOverView.cshtml
+++ b/TourManagement.Presentation/Views/Shared/HotelOverView.cshtml
@@ -1,7 +1,7 @@
 ﻿@model TourManagement.Models.DBContext.Hotel
 
 <div class="col-md-3 py-3">
-    <div class="card h-100">
+    <div class="card" style="height: 300px;">
         <div class="h-50"><img src="~/Content/images/hotels/@Model.Image" class="card-img-top img-thumbnail h-100" alt="@Model.Name"></div>
         <div class="card-body d-flex flex-column justify-content-between h-auto text-center">
             <a class="" style="color: black;" href="#">@Model.Name</a>
