--- a/TourManagement.Presentation/Views/Tours/Details.cshtml
+++ b/TourManagement.Presentation/Views/Tours/Details.cshtml
@@ -11,14 +11,14 @@
     <div class="row">
         <div class="col-md-8">
             <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-                <div class="carousel-inner">
+                <div class="carousel-inner" style="height: 400px;">
                     <div class="carousel-item active">
-                        <img src="~/Content/images/@Model.Images.FirstOrDefault().NameImage" style="width: 100%;" class="d-block w-100" height="400" alt="...">
+                        <img src="~/Content/images/@Model.Images.FirstOrDefault().NameImage" class="d-block w-100 img-thumbnail img-fluid" alt="...">
                     </div>
                     @foreach (var item in Model.Images)
                     {
                         <div class="carousel-item">
-                            <img src="~/Content/images/@item.NameImage" style="width: 100%;" class="d-block w-100" height="400" alt="...">
+                            <img src="~/Content/images/@item.NameImage"  class="d-block w-100 img-thumbnail img-fluid" alt="...">
                         </div>
                     }
                 </div>
@@ -92,6 +92,7 @@
                         <li>Vé thắng cảnh theo chương trình.</li>
                         <li>Nước uống trên xe: 1 chai 0,5 lit/ người/ ngày</li>
                         <li>Thuế VAT theo quy định của nhà nước</li>
+                        <li>Bảo hiểm với mức bồi thường tối đa 100.000.000 đồng/trường hợp. Không áp dụng cho khách từ 80 tuổi trở lên.</li>
                     </ul>
                 </div>
                 <div class="col-6">
