--- a/TourManagement.Presentation/Content/Site.css
+++ b/TourManagement.Presentation/Content/Site.css
@@ -15,6 +15,11 @@
 #group-tour:hover .dropdown-menu {
     display: block;
 }
+
+#group-price:hover .dropdown-menu{
+    display:block;
+}
+
 .ptc-60 {
     padding-top: 80px;
 }
