update tìm theo giá và phân trang

--- a/TourManagement.Presentation/Views/Home/Index.cshtml
+++ b/TourManagement.Presentation/Views/Home/Index.cshtml
@@ -2,9 +2,9 @@
 @model IEnumerable<Tour>
 @{
     ViewBag.Title = "Tìm tour du lịch - Let's Go";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    //Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<div class="container body-content py-3">
+<div class="py-3">
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
