--- a/TourManagement.Presentation/Views/Tours/GetByCategory.cshtml
+++ b/TourManagement.Presentation/Views/Tours/GetByCategory.cshtml
@@ -6,6 +6,7 @@
     int totalPage = @ViewBag.TotalPage;
     int pageRange = 3;
     int currentPage = @ViewBag.CurrentPage;
+    var category = @ViewBag.CurrentCategory;
 
     var prevDisabled = (currentPage - 1 <= 0 ? "disabled" : "");
     var nextDisabled = (currentPage >= totalPage ? "disabled" : "");
@@ -15,15 +16,15 @@
 
 <div class="row w-100 m-0">
     <div class="col-10">
-
+        <a href="#">Trang chủ</a> >> <a href="#">@category</a>
     </div>
     <div class="nav-item btn col-2 " id="group-price">
         Mức giá
         <div class="dropdown-menu text-center w-100">
-            <a class="dropdown-item" href="@Url.Action("GetByPrice", "Tours", new { startPrice = 0, endPrice = 1000000, page = 1 })"> < 1,000,000 đ</a>
-            <a class="dropdown-item" href="@Url.Action("GetByPrice", "Tours", new { startPrice = 1000000, endPrice = 5000000, page = 1 })"> < 5,000,000 đ</a>
-            <a class="dropdown-item" href="@Url.Action("GetByPrice", "Tours", new { startPrice = 5000000, endPrice = 10000000, page = 1 })"> < 10,000,000 đ</a>
-            <a class="dropdown-item" href="@Url.Action("GetByPrice", "Tours", new { startPrice = 10000000, endPrice = 100000000, page = 1 })"> > 10,000,000 đ</a>
+            <a class="dropdown-item" href="@Url.Action("GetByPrice", "Tours", new {category, startPrice = 0, endPrice = 1000000, page = 1 })"> < 1,000,000 đ</a>
+            <a class="dropdown-item" href="@Url.Action("GetByPrice", "Tours", new {category, startPrice = 1000000, endPrice = 5000000, page = 1 })"> < 5,000,000 đ</a>
+            <a class="dropdown-item" href="@Url.Action("GetByPrice", "Tours", new {category, startPrice = 5000000, endPrice = 10000000, page = 1 })"> < 10,000,000 đ</a>
+            <a class="dropdown-item" href="@Url.Action("GetByPrice", "Tours", new {category, startPrice = 10000000, endPrice = 100000000, page = 1 })"> > 10,000,000 đ</a>
         </div>
     </div>
 </div>
@@ -31,7 +32,7 @@
 <div>
     @if (!Model.Any())
     {
-        <div class="text-center py-5"><p>Don't have any tour in foreign country</p></div>
+        <div class="text-center py-5"><p>Không tim thấy tour nào phù hợp</p></div>
     }
     else
     {
