--- a/TourManagement.Presentation/Views/Tours/GetByPrice.cshtml
+++ b/TourManagement.Presentation/Views/Tours/GetByPrice.cshtml
@@ -1,3 +1,6 @@
 ﻿@model IEnumerable<TourManagement.Models.DBContext.Tour>
+@{ 
+    ViewBag.Title = "Danh sách tour";
+}
 
 @Html.Partial("GetByCategory",Model)
