--- a/TourManagement.Presentation/Views/Tours/Details.cshtml
+++ b/TourManagement.Presentation/Views/Tours/Details.cshtml
@@ -58,7 +58,7 @@
                     <hr />
                 </div>
             </div>
-            <div class="input-group addtocart py-3 justify-content-center">
+            <div class="input-group py-3 justify-content-center">
                 <a href="@Url.Action("OrderTour","OrderTours", new { id= Model.Id})" id="btnBook" class="btn btn-outline-primary mr-3">Book Now</a>
             </div>
            
