--- a/TourManagement.Presentation/Views/Hotels/Details.cshtml
+++ b/TourManagement.Presentation/Views/Hotels/Details.cshtml
@@ -1,8 +1,7 @@
 ﻿@model TourManagement.Models.DBContext.Hotel
-
 @{
-    ViewBag.Title = "Details";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewBag.Title = "Khách sạn | đặt phòng";
+
 }
 
 <div class="container tour-container pt-4">
@@ -12,7 +11,7 @@
     <div class="row">
         <div class="col-md-8">
             <div class="carousel-inner" style="height: 400px;">
-                <img src="~/Content/images/hotels/@Model.Image" class="d-block w-100 img-thumbnail img-fluid" alt="...">
+                <img src="~/Content/images/hotels/@Model.Image" class="d-block w-100 img-fluid" alt="...">
             </div>
         </div>
 
@@ -30,27 +29,53 @@
                         <p class="col-4">Điện thoại: </p><span>@Model.Phone</span>
                     </div>
                     <div class="row">
-                        <p class="col-4">Email:</p><span>@Model.Email</span>
+                        <p class="col-4">Email:</p><span>@Model.Email.ToLower()</span>
                     </div>
                     <hr />
                 </div>
             </div>
-            <div class="input-group addtocart py-3 justify-content-center">
-                <a href="@Url.Action("OrderTour","OrderTours", new { id= Model.Id})" id="btnBook" class="btn btn-outline-primary mr-3">Liên hệ</a>
+            <div class="input-group py-3 justify-content-center">
+                <a href="@Url.Action("","OrderTours", new { id= Model.Id})" class="btn btn-outline-primary mr-3">Liên hệ</a>
             </div>
         </div>
 
-        <div class="row mt-5 pt-4 border-top">
-            <div class="py-4 border-top">
-                <h5><img src="~/Content/images/content.svg" height="20" width="20"> Giới thiệu chung</h5>
-                <div>
-                    <p>@Model.Content</p>
-                </div>
-            </div>
-
-            <div class="row py-4 border-top">
-                
+    </div>
+    <div class="pt-4 border-top">
+        <div class="py-4 border-top">
+            <h5><img src="~/Content/images/content.svg" height="20" width="20"> Giới thiệu chung</h5>
+            <div>
+                <p>@Model.Content</p>
             </div>
         </div>
+        @if (Model.Rooms != null)
+        {
+            <div class="py-4 border-top bg-light">
+                @foreach (var item in Model.Rooms)
+                {
+                    <div class="row p-3">
+                        <div class="col-4">
+                            <img src="~/Content/images/hotels/room/@item.Image" height="200" width="100%"/>
+                        </div>
+                        <div class="col-5">
+                            <span class="font-weight-bold">@item.Name</span>
+                            <div>
+                                @item.Note
+                            </div>
+                            <div>
+                                <ul>
+                                    <li>Tối đa 02 người lớn và 02 trẻ em dưới 12 tuổi ở (có phụ thu).</li>
+                                    <li>Đặt ngay, thanh toán sau.</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-3 text-center">
+                            <p>Giá: @Math.Truncate(item.Price.Value).ToString("###,###,###") đ</p>
+                            <a class="nav-link btn btn-outline-secondary" href="#" >Liên hệ</a>
+                        </div>
+                    </div>
+                }
+            </div>
+        }
+
     </div>
 </div>
