--- a/TourManagement.Presentation/Areas/Admin/Views/EmployeesManagement/Edit.cshtml
+++ b/TourManagement.Presentation/Areas/Admin/Views/EmployeesManagement/Edit.cshtml
@@ -1,8 +1,12 @@
 ﻿@model TourManagement.Models.DBContext.Employee
 
 @{
-    ViewBag.Title = "Edit Employee " + Model.Name;
+    ViewBag.Title = "Cập nhật thông tin " + Model.Name;
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
+
+    var male = Model.Gender== true ? "selected" : "";
+    var female = Model.Gender== false ? "selected" : "";
+
 }
 
 <h2>Edit</h2>
@@ -13,46 +17,60 @@
 
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     @Html.HiddenFor(model => model.Id)
-    <div class="col">
-        <div class="form-group">
-            <label class="control-label">Name</label>
-            <div>
-                <input type="text" class="form-control" name="Name" value="@Model.Name" />
-                @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+    <div class="row w-100">
+        <div class="col-7">
+            <div class="form-group">
+                <label class="control-label">Name</label>
+                <div>
+                    <input type="text" class="form-control" name="Name" value="@Model.Name" />
+                    @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label>Gender</label>
+                <div>
+                    <select class="form-control" id="Gender" name="Gender">
+                        <option>Select Gender</option>
+                        <option value="True" @male>Nam</option>
+                        <option value="False" @female>Nữ</option>
+                    </select>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label class="control-label">Phone</label>
+                <div>
+                    <input type="number" name="Phone" id="Phone" class="form-control" min="0" value="@Model.Phone" />
+                    @Html.ValidationMessageFor(model => model.Phone, "", new { @class = "text-danger" })
+                </div>
             </div>
         </div>
 
-        <div class="form-group">
-            <label>Gender</label>
-            <div>
-                <select class="form-control" id="Gender" name="Gender">
-                    <option>Select Gender</option>
-                    <option value="True">Male</option>
-                    <option value="False">Female</option>
-                </select>
+        <div class="col-5">
+            <div class="form-group">
+                <label class="control-label">Address</label>
+                <div>
+                    <input type="text" name="Address" id="Address" class="form-control" value="@Model.Address" />
+                    @Html.ValidationMessageFor(model => model.Address, "", new { @class = "text-danger" })
+                </div>
             </div>
-        </div>
 
-        <div class="form-group">
-            <label class="control-label">Phone</label>
-            <div>
-                <input type="number" name="Phone" id="Phone" class="form-control" min="0" value="@Model.Phone" />
-                @Html.ValidationMessageFor(model => model.Phone, "", new { @class = "text-danger" })
+            <div class="form-group">
+                <label>Status working</label>
+                <div>
+                    <select class="form-control" id="StatusWorking" name="StatusWorking">
+                        <option value="0" selected>Nghỉ làm</option>
+                        <option value="1">Đang làm</option>
+                    </select>
+                </div>
             </div>
-        </div>
 
-        <div class="form-group">
-            <label class="control-label">Address</label>
-            <div>
-                <input type="text" name="Address" id="Address" class="form-control" value="@Model.Address" />
-                @Html.ValidationMessageFor(model => model.Address, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div>
-                <input type="submit" value="Save" class="btn btn-success" />
-                <a class="btn btn-secondary" href="@Url.Action("Index","HotelsManagement")">Cancel</a>
+            <div class="form-group">
+                <div>
+                    <input type="submit" value="Save" class="btn btn-success" />
+                    <a class="btn btn-secondary" href="@Url.Action("Index","HotelsManagement")">Cancel</a>
+                </div>
             </div>
         </div>
     </div>
