--- a/TourManagement.Presentation/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/TourManagement.Presentation/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -18,47 +18,38 @@
         <div class="col-2 text-right">
             <a class="navbar-brand" href="@Url.Action("Index", "Home", new { area = "" })">
                 <img class="border rounded-circle" src="~/Content/images/tours/logo1.jpg" style="width: 50px; height:50px">
-            </a> 
+            </a>
         </div>
 
         <div class="collapse navbar-collapse row" id="navbarSupportedContent">
-            <ul class="navbar-nav col">
-                <li class="nav-item dropdown" id="group-tour">
-                    <a class="nav-link font-weight-bold" href="@Url.Action("Index", "Home", new { area = "" })">TOUR</a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="@Url.Action("GetByCategory", "Tours", new { category = "Trong nước", page = 1 })">Trong nước</a>
-                        <a class="dropdown-item" href="@Url.Action("GetByCategory", "Tours", new { category = "Nước Ngoài", page = 1 })">Nước ngoài</a>
-                    </div>
+            <ul class="navbar-nav col-10">
+                <li class="nav-item font-weight-bold">
+                    <a href="@Url.Action("Index", "EmployeesManagement", new { area = "Admin" })" class="nav-link">
+                        <img src="~/Content/images/management.svg" height="20" width="20" />
+                        Employees
+                    </a>
                 </li>
                 <li class="nav-item font-weight-bold">
-                    @Html.ActionLink("KHÁCH SẠN", "Index", "Hotels", new { area = "" }, new { @class = "nav-link" })
+                    <a href="@Url.Action("Index", "ToursManagement", new { area = "Admin" })" class="nav-link">
+                        <img src="~/Content/images/travel-bag.svg" height="20" width="20" />
+                        Tours
+                    </a>
                 </li>
                 <li class="nav-item font-weight-bolder">
-                    @Html.ActionLink("GIỚI THIỆU", "Contact", "Home", new { area = "" }, new { @class = "nav-link" })
+                    <a href="@Url.Action("Index", "HotelsManagement", new { area = "Admin" })" class="nav-link">
+                        <img src="~/Content/images/hotel.svg" height="20" width="20" />
+                        Hotels
+                    </a>
                 </li>
             </ul>
-
-            @using (Html.BeginForm("SearchTour", "Home", FormMethod.Get, new { @class = "form-inline my-2 my-lg-0 col-4" }))
-            {
-                <input class="form-control mr-sm-2 btn-none" id="seach" name="search" type="search" placeholder="Search tour" aria-label="Search">
-                <button class="btn my-2 my-sm-0 btn-none" type="submit"><img src="~/Content/images/searchbtn.svg" width="25" height="25" /></button>
-            }
-            @Html.Partial("LoginPatial")
+            <div>
+                @Html.Partial("LoginPatial")
+            </div>
         </div>
     </nav>
-    <div class="clearfix">
-
-    </div>
     <div class="container ptc-60">
-        <div class=" d-flex">
-            <div class="left-menu ml-0" style="width: 240px; min-height: 100vh;">
-                <div class="position-fixed" style="width:205px;">
-                    @Html.Partial("_slideBar")
-                </div>
-            </div>
-            <div class=" container px-4 pt-2">
-                @RenderBody()
-            </div>
+        <div>
+            @RenderBody()
         </div>
         <hr />
         <div class="card-footer text-muted text-center">
