--- a/TourManagement.Presentation/Views/OrderTours/OrderTour.cshtml
+++ b/TourManagement.Presentation/Views/OrderTours/OrderTour.cshtml
@@ -9,13 +9,13 @@
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="~/Content/images/@tour.Images.FirstOrDefault().NameImage" style="width: 100%;"
+                    <img src="~/Content/images/tours/@tour.Images.FirstOrDefault().NameImage" style="width: 100%;"
                          class="d-block w-100" height="400" alt="...">
                 </div>
                 @foreach (var item in tour.Images)
                 {
                     <div class="carousel-item">
-                        <img src="~/Content/images/@item.NameImage" style="width: 100%;" class="d-block w-100" height="400" alt="...">
+                        <img src="~/Content/images/tours/@item.NameImage" style="width: 100%;" class="d-block w-100" height="400" alt="...">
                     </div>
                 }
             </div>
@@ -49,7 +49,7 @@
                     <span class="col-6">Giá từ: </span><span> @Math.Truncate(tour.PriceOfAdult.Value).ToString("###,###,###") đ/khách</span>
                 </div>
                 <div class="row">
-                    <span class="col-6">Số lượng chỗ còn: </span><span>@ViewBag.Remaining</span>
+                    <span class="col-6">Số lượng chỗ còn: </span><span id="quantityRemain">@ViewBag.Remaining</span>
                 </div>
             </div>
         </div>
@@ -77,13 +77,13 @@
         <tbody>
             <tr>
                 <th>Giá</th>
-                <td>@Math.Truncate(tour.PriceOfAdult.Value).ToString("###,###,###") đ</td>
-                <td>@Math.Truncate(tour.PriceOfChild.Value).ToString("###,###,###") đ</td>
+                <td ><span id="price_adult">@Math.Truncate(tour.PriceOfAdult.Value).ToString("###,###,###")</span> đ</td>
+                <td id="price_child">@Math.Truncate(tour.PriceOfChild.Value).ToString("###,###,###") đ</td>
             </tr>
             <tr>
                 <th>Phụ thu phòng đơn</th>
-                <td colspan="2">
-                    @Math.Truncate(tour.SurchargeOfRoom.Value).ToString("###,###,###")
+                <td colspan="2" id="price_room">
+                    @Math.Truncate(tour.SurchargeOfRoom.Value).ToString("###,###,###") đ
                 </td>
             </tr>
         </tbody>
@@ -95,7 +95,7 @@
 {
     @Html.AntiForgeryToken()
 
-    <div class="form-horizontal">
+    <div class="form-horizontal" onload="cal_price();">
         <h4 class="text-center">Thông tin đơn đặt tour</h4>
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
@@ -110,7 +110,7 @@
             <div class="form-group col-4">
                 <label class="control-label">Số diện thoại</label>
                 <div>
-                    <input type="text" value="@custommer.Phone" readonly/>
+                    <input type="text" value="@custommer.Phone" readonly />
                 </div>
             </div>
 
@@ -124,32 +124,42 @@
 
 
         <div class="row">
-            <div class="form-group col-4">
+            <div class="form-group col-3">
                 <label>Mã tour</label>
                 <div>
-                    <input type="number" value="@tour.Id" id="TourId" name="TourId" readonly/>
+                    <input type="number" value="@tour.Id" id="TourId" name="TourId" readonly />
                     @Html.ValidationMessageFor(model => model.TourId, "", new { @class = "text-danger" })
                 </div>
             </div>
 
-            <div class="form-group col-4">
-                <label>Người lớn</label>
+            <div class="form-group col-3">
+                <label>Số người lớn</label>
                 <div>
-                    <input type="number" min="1" id="QuantityAdult" name="QuantityAdult" value="1" />
+                    <input type="number" min="1" id="QuantityAdult" name="QuantityAdult" value="1" onchange="cal_price();" />
                     @Html.ValidationMessageFor(model => model.QuantityAdult, "", new { @class = "text-danger" })
                 </div>
             </div>
 
-            <div class="form-group col-4">
-                <label>Trẻ em</label>
+            <div class="form-group col-3">
+                <label>Số trẻ em</label>
                 <div>
-                    <input type="number" min="0" id="QuantityChild" name="QuantityChild" value="0" />
+                    <input type="number" min="0" id="QuantityChild" name="QuantityChild" value="0" onchange="cal_price();" />
                     @Html.ValidationMessageFor(model => model.QuantityChild, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group col-3">
+                <label>Số phòng đơn</label>
+                <div>
+                    <input type="number" min="0" id="NumberRoom" name="NumberRoom" value="0"  onchange="cal_price();" />
+                    @Html.ValidationMessageFor(model => model.NumberRoom, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
         <hr />
-
+        <div class="text-right w-100">
+            Tổng tiền: <span id="sum_price" class="text-danger font-weight-bold" >@Math.Truncate(tour.PriceOfAdult.Value)</span> đ
+        </div>
         <div class="text-center">
             <div>
                 <input type="submit" value="Hoàn thành" class="btn btn-outline-success" />
@@ -157,3 +167,6 @@
         </div>
     </div>
 }
+
+
+
